--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back_to_abilities"><![CDATA[< back to Abilities]]></string>
+    <string name="language">Language</string>
+    <string name="martial_arts">Martial Arts</string>
+    <string name="name">Name</string>
+    <string name="view_skills"><![CDATA[View Skills >]]></string>
+    <string name="add">Add</string>
+    <string name="search">Search...</string>
 </resources>
