- Implemented a number pad instead of the keyboard to modify skills - Filter abilities with 0 in them - Small change in UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="martial_arts">Martial Arts</string>
     <string name="name">Name</string>
     <string name="view_skills"><![CDATA[View Skills >]]></string>
-    <string name="add">Add</string>
+    <string name="add">Add Ability</string>
     <string name="search">Search...</string>
 </resources>
