--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="view_skills"><![CDATA[View Skills >]]></string>
     <string name="add">Add Ability</string>
     <string name="search">Search...</string>
+    <string name="unable_read_date">Unable to read date</string>
 </resources>
